[package]
name = "overworld_demo_typegame"
description = "A typing game demo using the Overworld library."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
    "Overworld Team <https://github.com/orgs/Liefland/teams/overworld>",
]
repository = "https://github.com/Liefland/overworld-demo-typegame"
homepage = "https://overworld.liefland.net"
categories = ["game-development"]
keywords = ["game", "typing", "overworld_demo"]
readme = "README.md"
publish = true

[dependencies]
iced = "0.10.0"
overworld = { version = "0.4.2" }
wikipedia_liefland = "0.4.0"
